--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,13 +2,7 @@
   <div class="sidebar-title">Contents</div>
   <nav class="sidebar-nav">
     <a href="{{ '/' | relative_url }}">🏠 Home</a>
-    <a href="{{ '/2-passive-voice' | relative_url }}">🔄 Passive Voice</a>
-    <a href="{{ '/3-irregular-verbs' | relative_url }}">📝 Irregular Verbs</a>
-    <a href="{{ '/4-phrasal-verbs' | relative_url }}">💬 Phrasal Verbs</a>
-  </nav>
-
-    <div class="sidebar-section">
-    <a href="{{ '/1-tenses' | relative_url }}">Tenses</a>
+    <a href="{{ '/1-tenses' | relative_url }}">📖 Tenses</a>
     <nav class="sidebar-subnav">
       <a href="{{ '/tenses/01-present-simple.html' | relative_url }}">Present Simple</a>
       <a href="{{ '/tenses/02-present-continuous.html' | relative_url }}">Present Continuous</a>
@@ -24,10 +18,10 @@
       <a href="{{ '/tenses/12-future-perfect.html' | relative_url }}">Future Perfect</a>
       <a href="{{ '/tenses/13-future-perfect-continuous.html' | relative_url }}">Future Perfect Continuous</a>
     </nav>
-  </div>
-
-  <div class="sidebar-section">
-    <a href="{{ '/5-prepositions' | relative_url }}">Prepositions</a>
+    <a href="{{ '/2-passive-voice' | relative_url }}">🔄 Passive Voice</a>
+    <a href="{{ '/3-irregular-verbs' | relative_url }}">📝 Irregular Verbs</a>
+    <a href="{{ '/4-phrasal-verbs' | relative_url }}">💬 Phrasal Verbs</a>
+    <a href="{{ '/5-prepositions' | relative_url }}">📍 Prepositions</a>
     <nav class="sidebar-subnav">
       <a href="{{ '/prepositions/01-time.html' | relative_url }}">Time</a>
       <a href="{{ '/prepositions/02-place.html' | relative_url }}">Place</a>
@@ -38,6 +32,6 @@
       <a href="{{ '/prepositions/07-common-mistakes.html' | relative_url }}">Common Mistakes</a>
       <a href="{{ '/prepositions/08-learning-tips.html' | relative_url }}">Learning Tips</a>
     </nav>
-  </div>
+  </nav>
 </aside>
 
