--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
 </head>
 <body>
   <div class="layout">
+    <input type="checkbox" id="sidebar-toggle" class="sidebar-toggle">
+    <label for="sidebar-toggle" class="sidebar-toggle-button">☰ Menu</label>
+    <div class="sidebar-overlay"></div>
     {% include sidebar.html %}
     <main>
       {{ content }}
