--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <aside class="sidebar">
   <nav class="sidebar-nav">
     <a href="{{ '/' | relative_url }}">🏠 Home</a>
-    <a href="{{ '/tenses/' | relative_url }}">📖 Tenses</a>
+    <a href="{{ '/tenses/README.html' | relative_url }}">📖 Tenses</a>
     <nav class="sidebar-subnav">
       <a href="{{ '/tenses/01-present-simple.html' | relative_url }}">Present Simple</a>
       <a href="{{ '/tenses/02-present-continuous.html' | relative_url }}">Present Continuous</a>
@@ -20,7 +20,7 @@
     <a href="{{ '/2-passive-voice' | relative_url }}">🔄 Passive Voice</a>
     <a href="{{ '/3-irregular-verbs' | relative_url }}">📝 Irregular Verbs</a>
     <a href="{{ '/4-phrasal-verbs' | relative_url }}">💬 Phrasal Verbs</a>
-    <a href="{{ '/prepositions/' | relative_url }}">📍 Prepositions</a>
+    <a href="{{ '/prepositions/README.html' | relative_url }}">📍 Prepositions</a>
     <nav class="sidebar-subnav">
       <a href="{{ '/prepositions/01-time.html' | relative_url }}">Time</a>
       <a href="{{ '/prepositions/02-place.html' | relative_url }}">Place</a>
