--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <img src="{{ '/assets/favicon.svg' | relative_url }}" alt="Logo">
         <span>{{ site.title }}</span>
       </a>
-      <label for="sidebar-toggle" class="sidebar-toggle-button" aria-label="Open menu">☰ Menu</label>
+      <label for="sidebar-toggle" class="sidebar-toggle-button" aria-label="Open menu">☰</label>
     </div>
   </header>
 
