--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -272,11 +272,11 @@ main td {
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        padding: 6px 10px;
-        margin: 8px;
+        padding: 6px;
         color: var(--text);
         font-weight: 700;
         font-size: 24px;
+        line-height: 18px;
         user-select: none;
     }
 
