--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,9 @@
   <link rel="apple-touch-icon" href="{{ '/assets/icons/icon-192x192.svg' | relative_url }}">
   
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="{{ '/assets/css/site.css' | relative_url }}" />
-  <link rel="stylesheet" href="{{ '/assets/css/table-responsive.css' | relative_url }}" />
-  <link rel="stylesheet" href="{{ '/assets/css/toggle.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ '/assets/css/base.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ '/assets/css/sidebar.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ '/assets/css/table.css' | relative_url }}" />
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
